--- a/public/css/sb-admin-2.css
+++ b/public/css/sb-admin-2.css
@@ -5,7 +5,7 @@
  */
 
 body {
-    background-color: #3a3f44;
+    /*background-color: #3a3f44;*/
 }
 
 #wrapper {
@@ -15,7 +15,7 @@ body {
 #page-wrapper {
     padding: 0 15px;
     min-height: 568px;
-    background-color: #272B30;
+    /*background-color: #272B30;*/
 }
 
 @media(min-width:768px) {
@@ -28,6 +28,7 @@ body {
 
 .navbar {
     border: none;
+    margin-bottom: 0px;
 }
 
 .navbar-top-links {
@@ -133,7 +134,6 @@ body {
         z-index: 1;
         position: absolute;
         width: 250px;
-        margin-top: 50px;
     }
 
     .navbar-top-links .dropdown-messages,
