--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,6 @@
   display: none !important;
 }
 
-
 body.modal-open .modal {
   background: rgba(0,0,0,0.8);
 }
@@ -11,67 +10,54 @@ body.modal-open {
   overflow: auto;
 }
 
-.table>tbody>tr>td {
-  /*border-top: 1px solid #303338;*/
-}
-.table>thead>tr>th {
-  /*border-bottom: 2px solid #3D3E42;*/
-}
-
 .table td .btn{
-    margin: 0;
+  margin: 0;
 }
 .breadcrumb a,
 .table a {
   text-decoration: none !important;
   outline: none !important;
 }
-table a:hover {
-  /*font-weight: bolder;*/
-}
+
 .sidebar .arrow {
-    float: none !important;
-    width: 10px;
+  float: none !important;
+  width: 10px;
 }
 .sweet-alert h2 {
-    text-shadow: none;
+  text-shadow: none;
 }
 
 .sidebar .fa.arrow:before {
-    content: "\f105";
+  content: "\f105";
 }
 
 .sidebar .active>a>.fa.arrow:before {
-    content: "\f107";
-}
-
-#page-wrapper .documents > .CodeMirror {
-
+  content: "\f107";
 }
 
 #page-wrapper .document  span,
 #page-wrapper .document  code{
-    font-size: 16px;
-    font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
-    /*border: none;*/
-    /*border-radius: 0;*/
-    /*background: #141414;*/
+  font-size: 16px;
+  font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+  /*border: none;*/
+  /*border-radius: 0;*/
+  /*background: #141414;*/
 }
 
 #page-wrapper .documents .tools {
-    text-align: right;
-    margin-bottom: 0;
-    margin-right: 14px;
-    height: 0px;
-    margin-bottom: -20px;
-    margin-top: 20px;
+  text-align: right;
+  margin-bottom: 0;
+  margin-right: 14px;
+  height: 0px;
+  margin-bottom: -20px;
+  margin-top: 20px;
 }
 
 .modal-dialog.fullscreen {
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    padding:0;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding:0;
 }
 
 #loading-bar .bar {
@@ -86,4 +72,15 @@ table a:hover {
   -ms-box-shadow: #ffffff 1px 0 6px 1px;
   -webkit-box-shadow: #ffffff 1px 0 6px 1px;
   box-shadow: #ffffff 1px 0 6px 1px;
+}
+
+#side-menu ul.nav {
+  max-height: 0;
+  transition: max-height 0.15s ease-out;
+  overflow: hidden;
+}
+
+#side-menu .active ul.nav {
+  max-height: 500px;
+  transition: max-height 0.25s ease-in;
 }
