--- a/public/css/style.css
+++ b/public/css/style.css
@@ -75,14 +75,13 @@ body.modal-open {
 }
 
 #side-menu ul.nav {
-  max-height: 0;
-  overflow: hidden;
+  display: none;
 }
 
 #side-menu.animate ul.nav {
-  transition: max-height 0.4s ease-out;
+  /*transition: max-height 0.4s ease-out;*/
 }
 
 #side-menu .active ul.nav {
-  max-height: 2000px;
+  display: block;
 }
