--- a/public/css/style.css
+++ b/public/css/style.css
@@ -123,6 +123,7 @@ body.modal-open {
     margin-bottom: 10px;
 }
 
+
 .editor-wrapper .CodeMirror {
     /*line-height: 25px;*/
     height: 50px;
@@ -130,12 +131,18 @@ body.modal-open {
     padding: 17px 9px 15px;
     border-radius: 3px;
     font-size: 15px;
-    box-shadow: 0px 0px 2px #7C6464 inset;
+    box-shadow: 0px 0px 3px #7C6464;
+    transition: box-shadow 1s;
     /*padding-right: 135px;*/
 }
 
+.editor-wrapper.invalid .CodeMirror {
+    transition: box-shadow 1s;
+    box-shadow: 0px 0px 6px #FF0000;
+}
+
 .editor-wrapper .CodeMirror.json-editor {
-    box-shadow: 0px 0px 4px #111111 inset;
+    box-shadow: 0px 0px 3px #7C6464;
 }
 
 .editor-wrapper .btn-search {
